k8s/staging/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: roaseq-staging
  labels:
    env: staging
    app: roaseq
---
apiVersion: v1
kind: Namespace
metadata:
  name: roaseq-releases
  labels:
    env: releases
    app: roaseq
